mocking out functionality for subscribing

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -24,12 +24,14 @@
             <!-- /Header -->
 
             <!-- Description -->
-            <p class="description section">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Perferendis, non, natus, repellendus in blanditiis explicabo dignissimos amet tenetur quia aperiam culpa cum illum numquam nesciunt voluptatibus itaque nemo beatae inventore!</p>
+            <p class="description section">
+               We are looking to change the monotony of on-boarding technologists through automation and real insight into candidates.
+            </p>
             <!-- /Description -->
 
             <!-- Subscription form -->
             <form class="subscription-form section red" id="subscription-form" novalidate>
-                <input type="email" class="subscription-email" id="subscription-email" name="email" placeholder="Enter email to sign up for news"><button class="subscription-submit" id="subscription-submit">Subscribe</button>
+                <input type="email" class="subscription-email" id="subscription-email" name="email" placeholder="Enter email to sign up for updates"><button class="subscription-submit" id="subscription-submit">Subscribe</button>
             </form>
             <!-- /Subscription form -->
 
@@ -71,11 +73,8 @@
 
             <!-- Social links -->
             <div class="social-links">
-                <a href="#" class="icon-facebook blue"></a>
-                <a href="#" class="icon-twitter-alt red"></a>
-                <a href="#" class="icon-googleplus yellow"></a>
-                <a href="#" class="icon-youtube green"></a>
-                <a href="#" class="icon-github-alt red"></a>
+                <a href="#" class="icon-twitter-alt blue"></a>
+                <a href="#" class="icon-github-alt yellow"></a>
             </div>
             <!-- /Social links -->
         </div>
