--- a/views/index.ejs
+++ b/views/index.ejs
@@ -25,7 +25,7 @@
 
             <!-- Description -->
             <p class="description section">
-               We are looking to change the monotony of on-boarding technologists through automation and real insight into candidates.
+               We are looking to remove the monotony from on-boarding technologists through automation and real insight into candidates.
             </p>
             <!-- /Description -->
 
