--- a/views/index.ejs
+++ b/views/index.ejs
@@ -73,7 +73,7 @@
 
             <!-- Social links -->
             <div class="social-links">
-                <a href="http://www.twiter.com/screeneasyme" class="icon-twitter-alt blue"></a>
+                <a href="http://www.twitter.com/screeneasyme" class="icon-twitter-alt blue"></a>
                 <a href="#" class="icon-github-alt yellow"></a>
             </div>
             <!-- /Social links -->
