adding github link

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -74,7 +74,7 @@
             <!-- Social links -->
             <div class="social-links">
                 <a href="http://www.twitter.com/screeneasyme" class="icon-twitter-alt blue"></a>
-                <a href="#" class="icon-github-alt yellow"></a>
+                <a href="http://github.com/screeneasy" class="icon-github-alt yellow"></a>
             </div>
             <!-- /Social links -->
         </div>
