--- a/views/index.ejs
+++ b/views/index.ejs
@@ -73,8 +73,8 @@
 
             <!-- Social links -->
             <div class="social-links">
-                <a href="http://www.twitter.com/screeneasyme" class="icon-twitter-alt blue"></a>
-                <a href="http://github.com/screeneasy" class="icon-github-alt yellow"></a>
+                <a href="http://www.twitter.com/screeneasyme" class="icon-twitter-alt blue" target="_blank"></a>
+                <a href="http://github.com/screeneasy" class="icon-github-alt yellow" target="_blank"></a>
             </div>
             <!-- /Social links -->
         </div>
