--- a/views/index.ejs
+++ b/views/index.ejs
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
-        <title>Recruite.me - Coming Soon</title>
+        <title>ScreenEasy.me - Coming Soon</title>
 
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
@@ -20,12 +20,12 @@
     <body>
         <div class="container">
             <!-- Header -->
-            <h1 class="header section">Recruit.me</h1>
+            <h1 class="header section">ScreenEasy.me</h1>
             <!-- /Header -->
 
             <!-- Description -->
             <p class="description section">
-               We are looking to remove the monotony from on-boarding technologists through automation and real insight into candidates.
+                We make technical screening Easy!
             </p>
             <!-- /Description -->
 
