--- a/views/index.ejs
+++ b/views/index.ejs
@@ -29,6 +29,13 @@
             <p class="description section">
                 We make technical screening Easy!
             </p>
+
+            <ul class="description" style="list-style:none">
+                <li>Candidate Data from GitHub, BitBucket, and other social streams</li>
+                <li>Share/Organize interview questions company wide</li>
+                <li>Real time code collaboration</li>
+                <li>Built-in video chat</li>
+            </ul>
             <!-- /Description -->
 
             <!-- Subscription form -->
@@ -61,7 +68,7 @@
                         <input type="radio" class="noDisplay" name="recruiter-q2-answer" id="recruiter-q2-answer2" value="1" />
                         <input type="radio" class="noDisplay" name="recruiter-q2-answer" id="recruiter-q2-answer3" value="2" />
                         <input type="radio" class="noDisplay" name="recruiter-q2-answer" id="recruiter-q2-answer4" value="3+" />
-                        <label for="recruiter-q2-answer1">0</label> 
+                        <label for="recruiter-q2-answer1">0</label>
                         <label for="recruiter-q2-answer2">1</label>
                         <label for="recruiter-q2-answer3">2</label>
                         <label for="recruiter-q2-answer4">3+</label>
@@ -81,15 +88,15 @@
                         <p>2. Do you look at code that a candidate has previously written (GitHub, BitBucket, etc)?</p>
                         <input type="radio" class="noDisplay" name="engineer-q2-answer" id="engineer-q2-answer1" value="yes" />
                         <input type="radio" class="noDisplay" name="engineer-q2-answer" id="engineer-q2-answer2" value="no" />
-                        <label for="engineer-q2-answer1">Yes</label> 
-                        <label for="engineer-q2-answer2">No</label> 
+                        <label for="engineer-q2-answer1">Yes</label>
+                        <label for="engineer-q2-answer2">No</label>
                     </div>
                     <div class="question">
                         <p>3. Do you prefer to ask technical or general questions during a phone screen?</p>
                         <input type="radio" class="noDisplay" name="engineer-q3-answer" id="engineer-q3-answer1" value="technical" />
                         <input type="radio" class="noDisplay" name="engineer-q3-answer" id="engineer-q3-answer2" value="general" />
-                        <label for="engineer-q3-answer1">Technical</label> 
-                        <label for="engineer-q3-answer2">General</label> 
+                        <label for="engineer-q3-answer1">Technical</label>
+                        <label for="engineer-q3-answer2">General</label>
                     </div>
                     <div class="question">
                         <p>4. What are some of the pain points of your current interview process?</p>
